force-app/main/default/objects/Prospect_Map__c/Prospect_Map__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Describes the mapping of Prospect Interests/Skills to various Programs in the organization</description>
    <label>Prospect Map</label>
</CustomObject>