force-app/main/default/objects/Prospect_Map__c/fields/Chapters__c.field-meta.xml
<CustomField>
    <fullName>Chapters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chapters</label>
    <type>Checkbox</type>
</CustomField>