force-app/main/default/objects/Prospect_Map__c/fields/Driver_Safety__c.field-meta.xml
<CustomField>
    <fullName>Driver_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver Safety</label>
    <type>Checkbox</type>
</CustomField>