force-app/main/default/objects/Prospect_Map__c/fields/Experience_Corps__c.field-meta.xml
<CustomField>
    <fullName>Experience_Corps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience Corps</label>
    <type>Checkbox</type>
</CustomField>