force-app/main/default/objects/Prospect_Map__c/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>