force-app/main/default/objects/Prospect_Map__c/fields/Purpose_Prize__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Prize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purpose Prize</label>
    <type>Checkbox</type>
</CustomField>