force-app/main/default/objects/Prospect_Map__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <defaultValue>false</defaultValue>
    <label>States</label>
    <type>Checkbox</type>
</CustomField>