force-app/main/default/objects/Prospect_Map__c/fields/Tax_Aide__c.field-meta.xml
<CustomField>
    <fullName>Tax_Aide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Aide</label>
    <type>Checkbox</type>
</CustomField>